--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="assets/bytestorelogo.svg" type="image/svg+xml" />
     <title>byteStore - Your Tech Destination</title>
     <meta
       name="description"
