--- a/profile.html
+++ b/profile.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+        <link rel="icon" href="assets/bytestorelogo.svg" type="image/svg+xml" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>byteStore - My Profile</title>
     <meta name="description" content="View your profile and order history." />
