--- a/index.html
+++ b/index.html
@@ -58,93 +58,126 @@
   <body class="bg-background text-foreground">
     <main>
       <!-- Hero Section -->
-      <section class="hero-section py-20 md:py-32">
-        <div class="uk-container relative z-10 text-center">
-          <span
-            class="inline-block text-xs font-semibold uppercase tracking-widest text-muted-foreground mb-4 border rounded-full px-3 py-1"
-            style="border-color: hsl(var(--border))"
-          >
-            🚀 New Arrivals Available
-          </span>
-          <h1
-            class="text-4xl md:text-6xl font-extrabold tracking-tight text-foreground mb-4"
-          >
-            Tech That <span style="color: hsl(var(--primary))">Moves</span> You
-          </h1>
-          <p class="text-lg text-muted-foreground max-w-xl mx-auto mb-8">
-            Discover premium laptops, phones, audio gear, and accessories — all
-            at the best prices in Egypt.
-          </p>
-          <div class="flex justify-center gap-3 flex-wrap">
-            <a href="shop.html" class="uk-btn uk-btn-primary uk-btn-md">
-              <i data-lucide="shopping-bag" class="h-4 w-4 mr-2"></i> Browse
-              Shop
-            </a>
-            <a href="#featured" class="uk-btn uk-btn-default uk-btn-md">
-              Featured Products ↓
-            </a>
+      <section
+        class="hero-section-banner relative py-20 md:py-32 overflow-hidden"
+      >
+        <!-- Background Image -->
+        <div class="absolute inset-0 z-0">
+          <img
+            src="assets/banner.jpg"
+            alt="Tech products showcase"
+            class="w-full h-full object-cover"
+          />
+        </div>
+
+        <!-- Content -->
+        <div class="uk-container relative z-10">
+          <div class="max-w-xl">
+            <h1
+              class="text-4xl md:text-5xl lg:text-6xl font-extrabold tracking-tight text-foreground dark:text-black mb-4"
+            >
+              Tech That
+              <span style="color: hsl(192 91% 36%)">Moves</span> You
+            </h1>
+            <p class="text-lg mb-8 dark:text-black">
+              Discover premium laptops, phones, audio gear, and accessories —
+              all at the best prices in Egypt.
+            </p>
+            <div class="flex flex-wrap gap-3">
+              <a href="shop.html" class="uk-btn uk-btn-primary uk-btn-md">
+                <i data-lucide="shopping-bag" class="h-4 w-4 mr-2"></i> Browse
+                Shop
+              </a>
+              <a
+                href="#featured"
+                class="uk-btn uk-btn-default uk-btn-md flex items-center gap-2"
+              >
+                Featured Products
+                <i data-lucide="arrow-down" class="h-4 w-4"></i>
+              </a>
+            </div>
           </div>
         </div>
       </section>
 
-      <!-- Category Cards -->
+      <!-- Two Column Layout: Categories + Trending -->
       <section class="uk-container py-16">
-        <h2 class="text-2xl font-bold text-center mb-8">Shop by Category</h2>
-        <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
-          <a
-            href="shop.html?category=laptop"
-            class="uk-card uk-card-body text-center group no-underline text-foreground hover:shadow-lg transition-shadow"
-          >
-            <i
-              data-lucide="laptop"
-              class="h-8 w-8 mx-auto mb-2 text-muted-foreground group-hover:text-primary transition-colors"
-              style="--tw-text-opacity: 1"
-            ></i>
-            <p class="font-semibold text-sm">Laptops</p>
-          </a>
-          <a
-            href="shop.html?category=phone"
-            class="uk-card uk-card-body text-center group no-underline text-foreground hover:shadow-lg transition-shadow"
-          >
-            <i
-              data-lucide="smartphone"
-              class="h-8 w-8 mx-auto mb-2 text-muted-foreground group-hover:text-primary transition-colors"
-            ></i>
-            <p class="font-semibold text-sm">Phones</p>
-          </a>
-          <a
-            href="shop.html?category=audio"
-            class="uk-card uk-card-body text-center group no-underline text-foreground hover:shadow-lg transition-shadow"
-          >
-            <i
-              data-lucide="headphones"
-              class="h-8 w-8 mx-auto mb-2 text-muted-foreground group-hover:text-primary transition-colors"
-            ></i>
-            <p class="font-semibold text-sm">Audio</p>
-          </a>
-          <a
-            href="shop.html?category=accessory"
-            class="uk-card uk-card-body text-center group no-underline text-foreground hover:shadow-lg transition-shadow"
-          >
-            <i
-              data-lucide="mouse"
-              class="h-8 w-8 mx-auto mb-2 text-muted-foreground group-hover:text-primary transition-colors"
-            ></i>
-            <p class="font-semibold text-sm">Accessories</p>
-          </a>
+        <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 lg:items-stretch">
+          <!-- Left: Shop by Category -->
+          <div class="lg:flex lg:flex-col">
+            <h2 class="text-2xl font-bold mb-6">Shop by Category</h2>
+            <div class="grid grid-cols-2 gap-4 lg:flex-1 lg:content-stretch">
+              <!-- Laptops -->
+              <a
+                href="shop.html?category=laptop"
+                class="uk-card uk-card-body text-center group no-underline text-foreground hover:shadow-lg transition-shadow lg:h-full flex flex-col justify-center"
+              >
+                <i
+                  data-lucide="laptop"
+                  class="h-10 w-10 mx-auto mb-3 text-muted-foreground transition-colors duration-300 group-hover:text-blue-500"
+                ></i>
+                <p class="font-semibold text-sm">Laptops</p>
+              </a>
+
+              <!-- Phones -->
+              <a
+                href="shop.html?category=phone"
+                class="uk-card uk-card-body text-center group no-underline text-foreground hover:shadow-lg transition-shadow lg:h-full flex flex-col justify-center"
+              >
+                <i
+                  data-lucide="smartphone"
+                  class="h-10 w-10 mx-auto mb-3 text-muted-foreground transition-colors duration-300 group-hover:text-red-500"
+                ></i>
+                <p class="font-semibold text-sm">Phones</p>
+              </a>
+
+              <!-- Audio -->
+              <a
+                href="shop.html?category=audio"
+                class="uk-card uk-card-body text-center group no-underline text-foreground hover:shadow-lg transition-shadow lg:h-full flex flex-col justify-center"
+              >
+                <i
+                  data-lucide="headphones"
+                  class="h-10 w-10 mx-auto mb-3 text-muted-foreground transition-colors duration-300 group-hover:text-green-500"
+                ></i>
+                <p class="font-semibold text-sm">Audio</p>
+              </a>
+
+              <!-- Accessories -->
+              <a
+                href="shop.html?category=accessory"
+                class="uk-card uk-card-body text-center group no-underline text-foreground hover:shadow-lg transition-shadow lg:h-full flex flex-col justify-center"
+              >
+                <i
+                  data-lucide="mouse"
+                  class="h-10 w-10 mx-auto mb-3 text-muted-foreground transition-colors duration-300 group-hover:text-orange-500"
+                ></i>
+                <p class="font-semibold text-sm">Accessories</p>
+              </a>
+            </div>
+          </div>
+
+          <!-- Right: Trending Now -->
+          <div class="lg:flex lg:flex-col">
+            <h2 class="text-2xl font-bold mb-6">Trending Now</h2>
+            <div id="trending-products-grid" class="grid grid-cols-2 gap-4">
+              <!-- Products loaded by JS -->
+            </div>
+          </div>
         </div>
       </section>
 
-      <!-- Featured Products -->
+      <!-- Trending Now Section (Full Width) -->
       <section id="featured" class="uk-container pb-16">
         <div class="flex justify-between items-center mb-6">
           <h2 class="text-2xl font-bold">Featured Products</h2>
           <a
             href="shop.html"
-            class="text-sm font-medium hover:underline"
+            class="text-sm font-medium hover:underline flex items-center gap-1"
             style="color: hsl(var(--primary))"
-            >View All →</a
           >
+            View All <i data-lucide="arrow-right" class="h-4 w-4"></i>
+          </a>
         </div>
         <div id="product-grid" class="grid grid-cols-2 md:grid-cols-4 gap-4">
           <!-- Products loaded by JS -->
@@ -164,18 +197,112 @@
     <script src="js/router.js"></script>
     <script src="js/ui.js"></script>
     <script>
-      // Load featured products (random 8)
+      // Load products on page load
       document.addEventListener("DOMContentLoaded", async () => {
-        renderProductSkeleton("product-grid", 4);
+        // Load trending products (4 items)
+        renderProductSkeleton("trending-products-grid", 4);
         try {
-          const products = await apiGet("/rest/v1/products?select=*&limit=8");
-          renderProducts(products, "product-grid");
+          const trendingProducts = await apiGet(
+            "/rest/v1/products?select=*&limit=4",
+          );
+          renderTrendingProducts(trendingProducts, "trending-products-grid");
+        } catch (e) {
+          console.error("Failed to load trending products:", e);
+          document.getElementById("trending-products-grid").innerHTML =
+            '<p class="col-span-full text-center text-muted-foreground py-8">Could not load products.</p>';
+        }
+
+        // Load featured products (8 items)
+        renderProductSkeleton("product-grid", 8);
+        try {
+          const featuredProducts = await apiGet(
+            "/rest/v1/products?select=*&limit=8",
+          );
+          renderProducts(featuredProducts, "product-grid");
         } catch (e) {
           console.error("Failed to load featured products:", e);
           document.getElementById("product-grid").innerHTML =
             '<p class="col-span-full text-center text-muted-foreground py-8">Could not load products. Please try again later.</p>';
         }
       });
+
+      // Render trending products with rating
+      function renderTrendingProducts(products, containerId) {
+        const grid = document.getElementById(containerId);
+        if (!grid) return;
+
+        if (!products || products.length === 0) {
+          grid.innerHTML = `
+            <div class="empty-state col-span-full">
+              <i data-lucide="package-x" class="h-12 w-12 mx-auto"></i>
+              <p class="mt-2 text-lg font-medium">No products found</p>
+            </div>`;
+          if (typeof lucide !== "undefined") lucide.createIcons();
+          return;
+        }
+
+        grid.innerHTML = products
+          .map((product) => {
+            const rating = (Math.random() * (5 - 4) + 4).toFixed(1);
+            return `
+            <div class="uk-card product-card overflow-hidden">
+              <a href="product.html?id=${product.id}" class="block no-underline text-foreground">
+                <div class="overflow-hidden bg-muted/30 p-3 flex items-center justify-center" style="height:140px">
+                  <img src="${product.image_url}" alt="${product.name}" 
+                       class="max-h-full max-w-full object-contain transition-transform duration-300 hover:scale-105" 
+                       loading="lazy"
+                       onerror="this.src='https://placehold.co/200x140/e2e8f0/94a3b8?text=No+Image'" />
+                </div>
+                <div class="p-3">
+                  <h3 class="text-xs font-semibold leading-tight line-clamp-2 min-h-[2rem] mb-2">${product.name}</h3>
+                  <div class="flex items-center gap-1 mb-2">
+                    <div class="flex text-yellow-500 text-xs">
+                      ${generateStars(rating)}
+                    </div>
+                    <span class="text-xs text-muted-foreground">${rating}</span>
+                  </div>
+                  <div class="flex items-center justify-between">
+                    <span class="text-sm font-bold" style="color:hsl(var(--primary))">$${Number(product.price).toLocaleString()}</span>
+                  </div>
+                </div>
+              </a>
+              <div class="px-3 pb-3">
+                <button
+                  onclick="event.preventDefault(); event.stopPropagation(); addToCart({id:${product.id}, name:'${product.name.replace(/'/g, "\\'")}', price:${product.price}, image_url:'${product.image_url}', category:'${product.category}'}); showToast('Added to cart!', 'success');"
+                  class="uk-btn uk-btn-primary uk-btn-sm w-full">
+                  <i data-lucide="shopping-cart" class="h-3 w-3 mr-1"></i> Add to Cart
+                </button>
+              </div>
+            </div>
+          `;
+          })
+          .join("");
+
+        if (typeof lucide !== "undefined") lucide.createIcons();
+      }
+
+      // Generate star rating HTML
+      function generateStars(rating) {
+        const fullStars = Math.floor(rating);
+        const hasHalfStar = rating % 1 >= 0.5;
+        let starsHtml = "";
+
+        for (let i = 0; i < fullStars; i++) {
+          starsHtml +=
+            '<i data-lucide="star" class="h-3 w-3 fill-current"></i>';
+        }
+        if (hasHalfStar) {
+          starsHtml +=
+            '<i data-lucide="star-half" class="h-3 w-3 fill-current"></i>';
+        }
+        const emptyStars = 5 - fullStars - (hasHalfStar ? 1 : 0);
+        for (let i = 0; i < emptyStars; i++) {
+          starsHtml +=
+            '<i data-lucide="star" class="h-3 w-3 text-gray-300"></i>';
+        }
+
+        return starsHtml;
+      }
     </script>
   </body>
 </html>
