--- a/checkout.html
+++ b/checkout.html
@@ -12,6 +12,10 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/franken-ui@2.0.0/dist/css/core.min.css"
     />
+    <script>/* Suppress Tailwind CDN dev-mode warning */
+      const _tw_warn = console.warn;
+      console.warn = (...args) => { if (typeof args[0] === "string" && args[0].includes("cdn.tailwindcss.com")) return; _tw_warn.apply(console, args); };
+    </script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -109,10 +113,13 @@
                 type="tel"
                 id="phone"
                 placeholder="01xxxxxxxxx"
+                maxlength="11"
+                inputmode="numeric"
+                pattern="^(010|011|012|015)\d{8}$"
                 required
               />
               <p class="text-xs text-destructive mt-1 hidden" id="phone-error">
-                Phone number is required
+                Enter a valid Egyptian phone number (11 digits, starting with 010, 011, 012, or 015)
               </p>
             </div>
 
@@ -342,7 +349,16 @@
           valid = false;
         }
 
-        if (!valid) showToast("Please fill in all required fields", "error");
+        // Phone validation — must be 11 digits starting with Egyptian prefix
+        const phoneInput = document.getElementById("phone");
+        const phoneError = document.getElementById("phone-error");
+        const phoneRegex = /^(010|011|012|015)\d{8}$/;
+        if (phoneInput.value.trim() && !phoneRegex.test(phoneInput.value.trim())) {
+          phoneError?.classList.remove("hidden");
+          valid = false;
+        }
+
+        if (!valid) showToast("Please fix the errors below", "error");
         return valid;
       }
     </script>
