--- a/register.html
+++ b/register.html
@@ -12,6 +12,10 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/franken-ui@2.0.0/dist/css/core.min.css"
     />
+    <script>/* Suppress Tailwind CDN dev-mode warning */
+      const _tw_warn = console.warn;
+      console.warn = (...args) => { if (typeof args[0] === "string" && args[0].includes("cdn.tailwindcss.com")) return; _tw_warn.apply(console, args); };
+    </script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -83,15 +87,15 @@
                 class="uk-input mt-1"
                 type="password"
                 id="reg-password"
-                placeholder="Min 6 characters"
+                placeholder="Min 8 characters"
                 required
-                minlength="6"
+                minlength="8"
               />
               <p
                 class="text-xs text-destructive mt-1 hidden"
                 id="reg-password-error"
               >
-                Password must be at least 6 characters
+                Password must be at least 8 characters
               </p>
             </div>
 
@@ -175,7 +179,7 @@
                 .classList.add("hidden");
             }
 
-            if (!password || password.length < 6) {
+            if (!password || password.length < 8) {
               document
                 .getElementById("reg-password-error")
                 .classList.remove("hidden");
