feat: Implement functional contact form submission, add new promotional and informational sections to the homepage, and introduce a new stylesheet.

--- a/checkout.html
+++ b/checkout.html
@@ -306,7 +306,7 @@
               localStorage.removeItem("cart");
               updateCartBadge();
 
-              showToast("Order placed successfully! 🎉", "success");
+              showToast("Order placed successfully!", "success");
               setTimeout(() => (window.location.href = "profile.html"), 2000);
             } catch (err) {
               console.error("Order failed:", err);
