--- a/index.html
+++ b/index.html
@@ -369,6 +369,9 @@
         const grid = document.getElementById(containerId);
         if (!grid) return;
 
+        // Cache products for safe cart lookup
+        products.forEach((p) => { _productCache[p.id] = p; });
+
         if (!products || products.length === 0) {
           grid.innerHTML = `
             <div class="empty-state col-span-full">
@@ -405,9 +408,9 @@
                 </div>
               </a>
               <div class="px-3 pb-3">
-                <button
-                  onclick="event.preventDefault(); event.stopPropagation(); addToCart({id:${product.id}, name:'${product.name.replace(/'/g, "\\'")}', price:${product.price}, image_url:'${product.image_url}', category:'${product.category}'});"
-                  class="uk-btn uk-btn-primary uk-btn-sm w-full">
+                 <button
+                   onclick='event.preventDefault(); event.stopPropagation(); addToCartById(${product.id});'
+                   class="uk-btn uk-btn-primary uk-btn-sm w-full">
                   <i data-lucide="shopping-cart" class="h-3 w-3 mr-1"></i> Add to Cart
                 </button>
               </div>
