--- a/shop.html
+++ b/shop.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-        <link rel="icon" href="assets/bytestorelogo.svg" type="image/svg+xml" />
+    <link rel="icon" href="assets/bytestorelogo.svg" type="image/svg+xml" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>byteStore - Shop</title>
     <meta
@@ -15,9 +15,17 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/franken-ui@2.0.0/dist/css/core.min.css"
     />
-    <script>/* Suppress Tailwind CDN dev-mode warning */
+    <script>
+      /* Suppress Tailwind CDN dev-mode warning */
       const _tw_warn = console.warn;
-      console.warn = (...args) => { if (typeof args[0] === "string" && args[0].includes("cdn.tailwindcss.com")) return; _tw_warn.apply(console, args); };
+      console.warn = (...args) => {
+        if (
+          typeof args[0] === "string" &&
+          args[0].includes("cdn.tailwindcss.com")
+        )
+          return;
+        _tw_warn.apply(console, args);
+      };
     </script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -67,7 +75,7 @@
         class="flex flex-col md:flex-row gap-4 mb-6 items-start md:items-center flex-wrap"
       >
         <!-- Search -->
-        <div class="relative flex-1 w-full md:w-auto" style="min-width:200px">
+        <div class="relative flex-1 w-full md:w-auto" style="min-width: 200px">
           <i
             data-lucide="search"
             class="absolute left-3 top-1/2 -translate-y-1/2 h-4 w-4 text-muted-foreground"
@@ -184,6 +192,13 @@
           });
         }
 
+        // Pre-fill search input from URL ?search= param (set by navbar search bar)
+        const urlSearch = getParam("search");
+        if (urlSearch) {
+          const searchInput = document.getElementById("search-input");
+          if (searchInput) searchInput.value = urlSearch;
+        }
+
         renderProductSkeleton("product-grid", 8);
         try {
           allProducts = await apiGet("/rest/v1/products?select=*&order=id");
@@ -219,8 +234,10 @@
         const brandSelect = document.getElementById("brand-select");
         if (!brandSelect) return;
         // Requirement: Array Method — .reduce() + Set for extracting unique brands
-        const brands = [...new Set(products.map(p => p.brand).filter(Boolean))].sort();
-        brands.forEach(brand => {
+        const brands = [
+          ...new Set(products.map((p) => p.brand).filter(Boolean)),
+        ].sort();
+        brands.forEach((brand) => {
           const opt = document.createElement("option");
           opt.value = brand;
           opt.textContent = brand;
