feat: add chatbot functionality with user-based rate limiting
- Implemented chatbot UI and logic in js/chatbot.js for user interaction.
- Integrated chatbot into login, product, profile, register, and shop pages.
- Created Supabase Edge Function for chatbot processing with user authentication and rate limiting.
- Added SQL migration for chatbot rate limiting table and function.
- Enhanced error handling and user feedback in chatbot interactions.

--- a/checkout.html
+++ b/checkout.html
@@ -229,6 +229,7 @@
     <script src="js/cart.js"></script>
     <script src="js/router.js"></script>
     <script src="js/ui.js"></script>
+    <script src="js/chatbot.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", () => {
         // Auth guard
