--- a/contact.html
+++ b/contact.html
@@ -189,6 +189,7 @@
     <script src="js/cart.js"></script>
     <script src="js/router.js"></script>
     <script src="js/ui.js"></script>
+    <script src="js/chatbot.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", () => {
         // Pre-fill email if logged in
