--- a/admin.html
+++ b/admin.html
@@ -356,5 +356,6 @@
     <script src="js/router.js"></script>
     <script src="js/ui.js"></script>
     <script src="js/admin.js"></script>
+    <script src="js/chatbot.js"></script>
   </body>
 </html>
