--- a/shop.html
+++ b/shop.html
@@ -173,6 +173,7 @@
     <script src="js/cart.js"></script>
     <script src="js/router.js"></script>
     <script src="js/ui.js"></script>
+    <script src="js/chatbot.js"></script>
     <script>
       let allProducts = [];
       let activeCategory = "all";
