feat: enhance admin dashboard with product image processor link and quick format option; improve chatbot clear button confirmation

--- a/admin.html
+++ b/admin.html
@@ -240,6 +240,16 @@
               onchange="uploadProductImage(this)"
             />
             <div class="flex gap-2 items-center">
+              <a
+                href="https://product-image-processor.vercel.app/"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="uk-btn uk-btn-ghost uk-btn-icon uk-btn-sm shrink-0"
+                title="Open Product Image Processor"
+                aria-label="Open Product Image Processor"
+              >
+                <i data-lucide="zap" class="h-4 w-4"></i>
+              </a>
               <button
                 type="button"
                 id="upload-image-btn"
@@ -262,7 +272,20 @@
           </div>
 
           <div>
-            <label class="text-sm font-medium mb-1 block">Description</label>
+            <div class="flex items-center justify-between mb-1">
+              <label class="text-sm font-medium block">Description</label>
+              <a
+                href="https://dewallify.creative-geek.tech/"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="uk-btn uk-btn-ghost uk-btn-sm shrink-0 flex items-center gap-1.5"
+                title="Quick format (opens DeWallify)"
+                aria-label="Quick format (opens DeWallify)"
+              >
+                <i data-lucide="wand-2" class="h-4 w-4"></i>
+                Quick format
+              </a>
+            </div>
             <textarea
               id="pf-description"
               class="uk-textarea w-full"
