feat: update promotional message for free delivery offer

--- a/index.html
+++ b/index.html
@@ -335,9 +335,7 @@
               ></i>
             </div>
             <h3 class="font-semibold mb-1">Free Delivery</h3>
-            <p class="text-sm text-muted-foreground">
-              On all orders over EGP 5,000
-            </p>
+            <p class="text-sm text-muted-foreground">For a limited time</p>
           </div>
           <div class="text-center p-4">
             <div
