feat: add dark mode gradient overlay for mobile and enhance token management in API functions

--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
         <div class="uk-container relative z-10">
           <div class="max-w-xl">
             <h1
-              class="text-4xl md:text-5xl lg:text-6xl font-extrabold tracking-tight text-foreground dark:text-black mb-4"
+              class="text-4xl md:text-5xl lg:text-6xl font-extrabold tracking-tight text-foreground dark:text-white md:dark:text-black mb-4"
             >
               Tech That
               <span style="color: hsl(192 91% 36%)">Moves</span> You
             </h1>
-            <p class="text-lg mb-8 dark:text-black">
+            <p class="text-lg mb-8 dark:text-white md:dark:text-black">
               Discover premium laptops, phones, audio gear, and accessories —
               all at the best prices in Egypt.
             </p>
